# morris

./: AUTHORS  ChangeLog  Makefile.am  README  configure.ac  morris.desktop.in  morris.schemas.in  net.nine-mens-morris.gschema.xml
debian/: changelog  control  copyright  rules
m4/: ChangeLog
pixmaps/: Makefile.am
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  de.po  es.po  zh.po
src/: Makefile.am  Makefile.in  algo_alphabeta.cc  algo_alphabeta.hh  algo_random.cc  algo_random.hh  app_configmgr.cc  app_configmgr.hh  appgtk_configmgr.cc  appgtk_configmgr.hh  appgui.hh  board.cc  board.hh  boardgui.cc  boardgui.hh  boardspec.cc  boardspec.hh  configmgr.cc  configmgr.hh  constants.hh  control.cc  control.hh  gconf_configmgr.cc  gconf_configmgr.hh  gtk_appgui.cc  gtk_appgui.hh  gtk_appgui_interface.hh  gtk_menutoolbar.cc  gtk_menutoolbar.hh  gtk_movelog.cc  gtk_movelog.hh  gtk_prefAI.cc  gtk_prefDisplay.cc  gtk_prefDisplay.hh  gtk_prefRules.cc  gtk_threadtunnel.cc  gtk_threadtunnel.hh  gtkcairo_boardgui.cc  gtkcairo_boardgui.hh  learn.hh  (+12 more)
